--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.astuntechnology</groupId>
 	<artifactId>wps</artifactId>
-	<version>2.12-SNAPSHOT</version>
+	<version>2.13-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>wps</name>
@@ -12,7 +12,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<geotools.version>18-SNAPSHOT</geotools.version>
+		<geotools.version>19-SNAPSHOT</geotools.version>
 		<geoserver.version>${project.version}</geoserver.version>
 	</properties>
 	<build>
@@ -29,11 +29,6 @@
 			</plugins>
 		</pluginManagement>
 		<plugins>
-			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-shade-plugin</artifactId> 
-				<version>2.4.3</version> <executions> <execution> <phase>package</phase> 
-				<goals> <goal>shade</goal> </goals> <configuration> <artifactSet> <excludes>org.geotools*:**</excludes> 
-				<excludes>org.geoserver*:**</excludes> </artifactSet> </configuration> </execution> 
-				</executions> </plugin> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
@@ -126,16 +121,19 @@
 			<groupId>org.geotools</groupId>
 			<artifactId>gt-xml</artifactId>
 			<version>${geotools.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.geotools.xsd</groupId>
 			<artifactId>gt-xsd-wfs</artifactId>
 			<version>${geotools.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.geoserver.extension</groupId>
 			<artifactId>gs-wps-core</artifactId>
 			<version>${geoserver.version}</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	<repositories>
