--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.astuntechnology</groupId>
 	<artifactId>wps</artifactId>
-	<version>2.13-SNAPSHOT</version>
+	<version>2.14.0</version>
 	<packaging>jar</packaging>
 
 	<name>wps</name>
@@ -12,7 +12,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<geotools.version>19-SNAPSHOT</geotools.version>
+		<geotools.version>20.0</geotools.version>
 		<geoserver.version>${project.version}</geoserver.version>
 	</properties>
 	<build>
@@ -135,6 +135,16 @@
 			<version>${geoserver.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.4</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.3</version>
+    </dependency>
 	</dependencies>
 	<repositories>
 		<repository>
