--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,11 @@
       <artifactId>commons-cli</artifactId>
       <version>1.3</version>
     </dependency>
+    <dependency>
+    	<groupId>org.geotools.jdbc</groupId>
+    	<artifactId>gt-jdbc-postgis</artifactId>
+    	<version>${geotools.version}</version>
+    </dependency>
 	</dependencies>
 	<repositories>
 		<repository>
